--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,3 +1,6 @@
-<p>
-  player works!
-</p>
+<div class="player">
+
+  <img src="/assets/img/blank-profile-picture.png" >
+
+  <span>{{ name }}</span>
+</div>
