--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,9 @@
-<app-player></app-player>
+<app-player
+  *ngFor="let player of game.players; let i = index;"
+  [ngStyle]="{'top.px': (1+i) * 130}"
+  [name]="player"
+  class="player-position"
+  ></app-player>
 
 <div class="game">
 
