--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -34,6 +34,11 @@
     transform: translateX(200px) translateY(-180px) rotate(10deg);
 }
 
+.player-position {
+    position: absolute;
+    right: 0;
+}
+
 @keyframes pick-card-animation {
     0% {
         transform: scale(1);
