add button added

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -16,6 +16,12 @@
     }
 }
 
+.btn-add {
+    position: absolute;
+    right: 64px;
+    bottom: 64px;
+}
+
 .top-card {
     cursor: pointer;
     transition: 125ms all ease-in-out;
