--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -23,6 +23,8 @@
   </div>
 </div>
 
+<app-game-info class="info-card"></app-game-info>
+
 <button mat-fab color='primary' (click)="openDialog()" class="btn-add">
   <mat-icon>add</mat-icon>
 </button>
