--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,8 +1,6 @@
 <mat-card>
 
-  <mat-card-title>Titel</mat-card-title>
-  <mat-card-content>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur nihil aliquid sunt. Commodi
-    ratione tenetur, aliquam placeat incidunt qui natus dolores laborum reprehenderit inventore saepe sint voluptatem
-    quisquam, recusandae eos?</mat-card-content>
+  <mat-card-title>{{ title }}</mat-card-title>
+  <mat-card-content>{{ description }}</mat-card-content>
 
 </mat-card>
