--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -11,7 +11,7 @@
   <div>
 
     <!-- Card stack -->
-    <img *ngFor="let card of [1, 2, 3, 4, 5]; let i = index;" [ngStyle]="{'right.px': (1+i) * 4}" src="/assets/img/card_cover.png">
+    <img *ngFor="let card of [1, 2, 3, 4, 5]; let i = index;" [ngStyle]="{'right.px': (1+i) * 4}" src="/assets/img/cards/card_cover.png">
     <img (click)="takeCard()" class="top-card" style="right: 25px;" src="/assets/img/cards/card_cover.png">
     
     <!-- Stack for played card -->
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<app-game-info class="info-card"></app-game-info>
+<app-game-info [card]='currentCard' class="info-card"></app-game-info>
 
 <button mat-fab color='primary' (click)="openDialog()" class="btn-add">
   <mat-icon>add</mat-icon>
