first playable version

--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,6 +1,6 @@
 <mat-card>
 
-  <mat-card-title>{{ title }}</mat-card-title>
+  <mat-card-title>{{ card ? title : 'Add all player and pick a card!!!' }}</mat-card-title>
   <mat-card-content>{{ description }}</mat-card-content>
 
 </mat-card>
