--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -11,14 +11,14 @@
   <div>
 
     <!-- Card stack -->
-    <img *ngFor="let card of [1, 2, 3, 4, 5]; let i = index;" [ngStyle]="{'right.px': (1+i) * 4}" src="/assets/img/cards/card_cover.png">
-    <img (click)="takeCard()" class="top-card" style="right: 25px;" src="/assets/img/cards/card_cover.png">
+    <img *ngFor="let card of [1, 2, 3, 4, 5]; let i = index;" [ngStyle]="{'right.px': (1+i) * 4}" src="assets/img/cards/card_cover.png">
+    <img (click)="takeCard()" class="top-card" style="right: 25px;" src="assets/img/cards/card_cover.png">
     
     <!-- Stack for played card -->
-    <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png">
+    <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}.png">
     
     <!-- Current card (animation) -->
-    <img *ngIf="pickCardAnimation" (click)="takeCard()"  class="pick-card" style="right: 25px;" src="/assets/img/cards/{{ currentCard }}.png">
+    <img *ngIf="pickCardAnimation" (click)="takeCard()"  class="pick-card" style="right: 25px;" src="assets/img/cards/{{ currentCard }}.png">
   
   </div>
 </div>
