--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,5 +1,5 @@
 <div class="start-screen">
   <div>
-    <button (click)="newGame()"><p>New Game</p></button>
+    <button (click)="newGame()">New Game</button>
   </div>
 </div>
