--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -9,6 +9,7 @@
     
     div {
         position: relative;
+        right: 10px;
         img {
             position: absolute;
             width: 120px;
@@ -17,6 +18,12 @@
 }
 
 .btn-add {
+    position: absolute;
+    right: 126px;
+    bottom: 48px;
+}
+
+.btn-end {
     position: absolute;
     right: 48px;
     bottom: 48px;
@@ -32,12 +39,11 @@
 }
 
 .pick-card {
-    animation: pick-card-animation 1s ease-in-out forwards;
+    animation: pick-card-animation 700ms ease-in-out forwards;
 }
 
 .played-card {
-    right: 25px;
-    transform: translateX(200px) translateY(-180px) rotate(10deg);
+    transform: translateX(0) translateY(-250px) rotate(15deg);
 }
 
 .player-position {
@@ -54,15 +60,15 @@
 
 @keyframes pick-card-animation {
     0% {
-        transform: scale(1);
+        transform: scale(1.05) translateY(-12px);
     }
-    30% {
+    20% {
         transform: scale(1.7);
     }
-    50%{
+    70%{
         transform: scale(1.7);
     }
     100% {
-        transform: scale(1) translateX(200px) translateY(-180px) rotate(10deg);
+        transform: scale(1.1) translateX(0) translateY(-240px) rotate(15deg);
     }
 }
