--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,31 +1,62 @@
-<app-player
-  *ngFor="let player of game.players; let i = index;"
-  [ngStyle]="{'top.px': (1+i) * 95}"
-  [name]="player"
-  [playerActive]="i == game.currentPlayer"
-  class="player-position"
-  ></app-player>
 
-<div class="game">
+<img *ngIf="game.gameOver" class="game-over-img" src="assets/img/game-over.jpg">
+
+<div *ngIf="!game.gameOver" class="player-container">
+
+  <app-player
+    *ngFor="let player of game.players; let i = index;"
+    [ngStyle]="{'top.px': i * 35 + 15}"
+    [name]="player"
+    [playerActive]="i == game.currentPlayer"
+    [profilePath]="game.profilePath[i]"
+    class="player-position"
+    (playerQuit)="deletePlayer(i)"
+    ></app-player>
+
+</div>
+
+<div *ngIf="!game.gameOver" class="game">
 
   <div>
 
     <!-- Card stack -->
-    <img *ngFor="let card of game.stack; let i = index;" [ngStyle]="{'right.px': i / 5 * 2, 'top.px': -i / 5}" src="assets/img/cards/card_cover.png">
-    <img *ngIf="game.stack.length" (click)="takeCard()" class="top-card" [ngStyle]="{'right.px': (game.stack.length) / 5 * 2, 'top.px': -(game.stack.length)/5}" src="assets/img/cards/card_cover.png">
+    <img
+    *ngFor="let card of game.stack; let i = index;"
+    [ngStyle]="{'right.px': i / 5 * 2, 'top.px': -i / 5}"
+    src="assets/img/cards/card_cover.png"
+    >
+    
+    <img
+    *ngIf="game.stack.length"
+    (click)="takeCard()"
+    class="top-card"
+    [ngStyle]="{'right.px': (game.stack.length) / 5 * 2, 'top.px': -(game.stack.length)/5}"
+    src="assets/img/cards/card_cover.png"
+    >
     
     <!-- Stack for played card -->
-    <img *ngFor="let card of game.playedCards; let i = index" class="played-card" [ngStyle]="{'right.px': i, 'top.px': -i / 5}" src="assets/img/cards/{{ card }}.png">
+    <img
+    *ngFor="let card of game.playedCards; let i = index"
+    class="played-card"
+    [ngStyle]="{'right.px': i, 'top.px': -i / 5}"
+    src="assets/img/cards/{{ card }}.png"
+    >
     
     <!-- Current card (animation) -->
-    <img *ngIf="pickCardAnimation" (click)="takeCard()"  class="pick-card" [ngStyle]="{'right.px': (game.stack.length) / 5 * 2}" src="assets/img/cards/{{ currentCard }}.png">
+    <img
+    *ngIf="game.pickCardAnimation"
+    (click)="takeCard()"
+    class="pick-card"
+    [ngStyle]="{'right.px': (game.stack.length) / 5 * 2}"
+    src="assets/img/cards/{{ game.currentCard }}.png"
+    >
   
   </div>
 </div>
 
-<app-game-info [card]='currentCard' class="info-card"></app-game-info>
+<app-game-info *ngIf="!game.gameOver" [card]='game.currentCard' class="info-card"></app-game-info>
 
-<button mat-fab color='primary' (click)="openDialog()" class="btn-add">
+<button *ngIf="!game.gameOver" mat-fab color='primary' (click)="openDialog()" class="btn-add">
   <mat-icon>add</mat-icon>
 </button>
 <button mat-fab color='Basic' (click)="cancelGame()" class="btn-end">
