--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -26,10 +26,12 @@
     src="assets/img/cards/card_cover.png"
     >
     
+    <!-- Card with draw function -->
     <img
     *ngIf="game.stack.length"
     (click)="takeCard()"
     class="top-card"
+    [class.shake]="shakeCard"
     [ngStyle]="{'right.px': (game.stack.length) / 5 * 2, 'top.px': -(game.stack.length)/5}"
     src="assets/img/cards/card_cover.png"
     >
@@ -58,6 +60,7 @@
 
 <button *ngIf="!game.gameOver" mat-fab color='primary' (click)="openDialog()" class="btn-add">
   <mat-icon>add</mat-icon>
+  <img *ngIf="!game.players.length" class="information-arrow" src="assets/img/arrow-down.png">
 </button>
 <button mat-fab color='Basic' (click)="cancelGame()" class="btn-end">
   <mat-icon>keyboard_return</mat-icon>
