--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -79,6 +79,47 @@
     right: 15vw;
 }
 
+.shake {
+    animation: shake-animation 225ms ease-in-out;
+}
+
+.information-arrow {
+    position: absolute;
+    left: 4px;
+    top: -48px;
+    animation: information-arrow-animation 325ms ease-out alternate infinite;
+}
+
+@keyframes information-arrow-animation {
+    0% {
+        top: -48px;
+    }
+    100% {
+        top: -96px;
+    }
+}
+
+@keyframes shake-animation {
+    0% {
+        transform: translateX(0) scale(1.05) translateY(-12px);
+    }
+    20% {
+        transform: translateX(-10px) scale(1.05) translateY(-12px);
+    }
+    40% {
+        transform: translateX(10px) scale(1.05) translateY(-12px);
+    }
+    60% {
+        transform: translateX(-10px) scale(1.05) translateY(-12px);
+    }
+    80% {
+        transform: translateX(10px) scale(1.05) translateY(-12px);
+    }
+    100% {
+        transform: translateX(0) scale(1.05) translateY(-12px);
+    }
+}
+
 @keyframes pick-card-animation {
     0% {
         transform: scale(1.05) translateY(-12px);
